<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable name="vm" type="com.sakshi.fiassesment.viewmodel.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/s_img"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/view_text"
            android:textColor="@color/black"
            android:layout_marginHorizontal="40dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/pan_num_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="126dp"
            android:text="@string/pan_view_text"
            android:textColor="@color/grey"
            android:textSize="15dp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_text" />

        <EditText
            android:id="@+id/pan_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@={vm.panNumLiveData}"
            android:background="@{vm.panNumLiveData == null ? @drawable/grey_curved_outline:vm.panNumLiveData != null &amp; (vm.panNumLiveData.length &lt; 10 || !vm.panNumLiveData.matches(vm.regexPan)) ? @drawable/red_curved_outline : @drawable/purple_curved_outline}"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pan_num_view_text" />


        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:singleLine="false"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/error_pan"
            android:textColor="@color/red"
            android:textSize="13dp"
            android:visibility="@{vm.panNumLiveData != null &amp; (vm.panNumLiveData.length &lt; 10 || !vm.panNumLiveData.matches(vm.regexPan)) ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pan_num" />

        <TextView
            android:id="@+id/birth_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/birth_day_text"
            android:textColor="@color/grey"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pan_num" />

        <EditText
            android:id="@+id/day"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:background="@{ vm.day != null &amp; !vm.day.matches(vm.regexDay) ? @drawable/red_curved_outline : @drawable/grey_curved_outline}"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:inputType="number"
            android:hint="DD"
            android:text="@={vm.day}"
            android:maxLength="2"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birth_day" />

        <EditText
            android:id="@+id/month"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:inputType="number"
            android:hint="MM"
            android:maxLength="2"
            android:text="@={vm.month}"
            android:background="@{ vm.month != null &amp; !vm.month.matches(vm.regexMonth) ? @drawable/red_curved_outline : @drawable/grey_curved_outline}"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toBottomOf="@+id/birth_day" />

        <EditText
            android:id="@+id/year"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:text="@={vm.year}"
            android:background="@{ vm.year != null &amp; !vm.year.matches(vm.regexYear) ? @drawable/red_curved_outline : @drawable/grey_curved_outline}"
            android:hint="YYYY"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toBottomOf="@+id/birth_day" />

        <TextView
            android:id="@+id/details_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:singleLine="false"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/details_text"
            android:textColor="@color/grey"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/curved_btn"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="5dp"
            android:text="@string/next"
            android:enabled="@{vm.panNumLiveData.matches(vm.regexPan) &amp; vm.day.matches(vm.regexDay) &amp; vm.month.matches(vm.regexMonth) &amp; vm.year.matches(vm.regexYear) ? true : false}"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()->vm.showToast()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_text" />

        <TextView
            android:id="@+id/dont_have_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="false"
            android:text="@string/dont_have_pan"
            android:textColor="@color/purple"
            android:textSize="13dp"
            android:textStyle="bold"
            android:onClick="@{()->vm.dismiss()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>